--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -4,12 +4,14 @@
     border: 2px solid $color-border-primary;
     border-radius: 6px;
     padding: 24px;
-    margin: 20px;
-
-    flex: 1 400px;
+    margin-bottom: 10px;
     @include flex();
 
     transition: 0.3s ease;
+
+    @include media('md') {
+        margin: 20px;
+    }
 
     &__thumbnail {
         @include roundy(100px);
@@ -30,8 +32,6 @@
             margin-bottom: 5px;
         }
         &__desc {
-            max-width: 200px;
-            text-overflow: ellipsis;
             font-size: 0.8em;
             font-weight: 400;
             color: $color-font-desc;
