--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -8,3 +8,6 @@ $color-border-focus: #13B4E9;
 
 $color-font-header: #404A51;
 $color-font-desc: #92979B;
+
+$breakpoint-md: 480px;
+$breakpoint-lg: 768px;
