--- a/css/index.css
+++ b/css/index.css
@@ -53,21 +53,28 @@ body {
 }
 
 .page {
-  width: 80%;
+  width: 90%;
   margin: auto;
-  padding: 40px;
+  padding-top: 40px;
   font-family: "Open Sans", sans-serif;
+}
+@media (min-width: 480px) {
+  .page {
+    width: 80%;
+  }
 }
 .page .header {
   margin: 20px;
 }
 
-.main {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-items: center;
+@media (min-width: 480px) {
+  .main {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 }
 
 .card {
@@ -76,8 +83,7 @@ body {
   border: 2px solid #E0E0E0;
   border-radius: 6px;
   padding: 24px;
-  margin: 20px;
-  flex: 1 400px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -85,7 +91,13 @@ body {
   align-items: center;
   transition: 0.3s ease;
 }
+@media (min-width: 480px) {
+  .card {
+    margin: 20px;
+  }
+}
 .card__thumbnail {
+  overflow: hidden;
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -106,8 +118,6 @@ body {
   margin-bottom: 5px;
 }
 .card__info__desc {
-  max-width: 200px;
-  text-overflow: ellipsis;
   font-size: 0.8em;
   font-weight: 400;
   color: #92979B;
@@ -120,24 +130,83 @@ body {
 }
 
 .overlay {
+  font-family: "Open Sans", sans-serif;
   position: fixed;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.7);
 }
-.overlay .modal {
+
+.modal-wrapper {
   position: absolute;
-  padding: 20px;
-  border-radius: 6px;
-  border-bottom: 1px solid #fcfcfc;
-  background: white;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+.modal {
+  position: relative;
+  padding: 40px;
+  border-radius: 6px;
+  border-bottom: 1px solid #fcfcfc;
+  background: white;
+  box-shadow: 0 6px 20px -6px rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.modal__thumbnail {
+  overflow: hidden;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  box-shadow: 0 6px 16px -4px rgba(0, 0, 0, 0.3);
+  margin-bottom: 10px;
+}
+.modal__thumbnail img {
+  width: 100%;
+  height: auto;
+}
+.modal__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.modal__info__name {
+  display: block;
+  font-weight: 600;
+  font-size: 1.5em;
+  color: #404A51;
+  line-height: 2;
+}
+.modal__info__desc {
+  display: block;
+  color: #92979B;
+  line-height: 2;
+}
+.modal__info__divider {
+  display: block;
+  min-width: 300px;
+  border-bottom: 1px solid #E0E0E0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.icn-close {
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  top: -24px;
+  z-index: 1000;
+}
+
 .header {
   font-weight: 600;
+  line-height: 1.5;
   color: #404A51;
 }
 
