--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,6 +2,7 @@ $font-family-primary: 'Open Sans', sans-serif;
 
 $color-primary: white;
 $color-primary-fade: darken($color-primary, 1%);
+$color-primary-dark: #333;
 
 $color-border-primary: #E0E0E0;
 $color-border-focus: #13B4E9;
