--- a/css/index.css
+++ b/css/index.css
@@ -196,12 +196,69 @@ body {
   margin-bottom: 20px;
 }
 
+.left-arrow,
+.right-arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: hidden;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: center;
+  background: #333;
+  opacity: 0.7;
+  transition: 0.2s ease;
+}
+.left-arrow__path,
+.right-arrow__path {
+  fill: white;
+  transition: fill 0.2s ease;
+}
+.left-arrow:hover,
+.right-arrow:hover {
+  opacity: 1;
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.5);
+  background: white;
+}
+.left-arrow:hover .left-arrow__path,
+.left-arrow:hover .right-arrow__path,
+.right-arrow:hover .left-arrow__path,
+.right-arrow:hover .right-arrow__path {
+  fill: #13B4E9;
+}
+.left-arrow svg,
+.right-arrow svg {
+  display: block;
+  margin: auto;
+  height: 70%;
+  width: auto;
+}
+
+.left-arrow {
+  left: -80px;
+}
+
+.right-arrow {
+  right: -80px;
+}
+
 .icn-close {
   cursor: pointer;
   position: absolute;
-  right: 5px;
-  top: -24px;
+  background: white;
+  right: 0px;
+  top: 0px;
   z-index: 1000;
+  overflow: hidden;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 .header {
