--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/* You know what, I've just noticed that you've been using sass. I have no real clue how sass actually works and compiles. So if my comments are bad, ignore them. */
+/* Is the following code from reset.css? If so, it's better to just separate them out */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -43,11 +45,13 @@ table {
   border-spacing: 0;
 }
 
+/* Positioning of an overarching setter is weird here */
 * {
   font-size: 16px;
   box-sizing: border-box;
 }
 
+/* You already have a body block above. You could just set the background color there. I get that it might just be from reset.css, but again, you could just separate them. */
 body {
   background: #fcfcfc;
 }
@@ -58,6 +62,7 @@ body {
   padding-top: 40px;
   font-family: "Open Sans", sans-serif;
 }
+
 @media (min-width: 480px) {
   .page {
     width: 80%;
@@ -68,7 +73,7 @@ body {
 }
 
 @media (min-width: 480px) {
-  .main {
+  #main {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -91,11 +96,14 @@ body {
   align-items: center;
   transition: 0.3s ease;
 }
+
 @media (min-width: 480px) {
   .card {
     margin: 20px;
   }
 }
+
+/* Inconsistent spacing! */
 .card__thumbnail {
   overflow: hidden;
   width: 100px;
@@ -104,19 +112,23 @@ body {
   margin-right: 16px;
   overflow: hidden;
 }
+
 .card__thumbnail img {
   width: 100%;
   height: auto;
 }
+
 .card__info {
   font-family: "Open Sans", sans-serif;
 }
+
 .card__info__name {
   font-size: 1.2em;
   font-weight: 600;
   color: #404A51;
   margin-bottom: 5px;
 }
+
 .card__info__desc {
   font-size: 0.8em;
   font-weight: 400;
@@ -124,12 +136,13 @@ body {
   display: block;
   line-height: 1.6;
 }
+
 .card:hover {
   border-color: #13B4E9;
   box-shadow: 0 6px 18px -8px rgba(0, 0, 0, 0.2);
 }
 
-.overlay {
+#overlay {
   font-family: "Open Sans", sans-serif;
   position: fixed;
   width: 100vw;
@@ -144,7 +157,7 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.modal {
+#modal {
   position: relative;
   padding: 40px;
   border-radius: 6px;
@@ -165,10 +178,12 @@ body {
   box-shadow: 0 6px 16px -4px rgba(0, 0, 0, 0.3);
   margin-bottom: 10px;
 }
+
 .modal__thumbnail img {
   width: 100%;
   height: auto;
 }
+
 .modal__info {
   display: flex;
   flex-direction: column;
@@ -176,6 +191,7 @@ body {
   flex-wrap: nowrap;
   align-items: center;
 }
+
 .modal__info__name {
   display: block;
   font-weight: 600;
@@ -183,11 +199,13 @@ body {
   color: #404A51;
   line-height: 2;
 }
+
 .modal__info__desc {
   display: block;
   color: #92979B;
   line-height: 2;
 }
+
 .modal__info__divider {
   display: block;
   min-width: 300px;
@@ -215,23 +233,27 @@ body {
   opacity: 0.7;
   transition: 0.2s ease;
 }
+
 .left-arrow__path,
 .right-arrow__path {
   fill: white;
   transition: fill 0.2s ease;
 }
+
 .left-arrow:hover,
 .right-arrow:hover {
   opacity: 1;
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.5);
   background: white;
 }
+
 .left-arrow:hover .left-arrow__path,
 .left-arrow:hover .right-arrow__path,
 .right-arrow:hover .left-arrow__path,
 .right-arrow:hover .right-arrow__path {
   fill: #13B4E9;
 }
+
 .left-arrow svg,
 .right-arrow svg {
   display: block;
