fixed the bug where event listener cannot be added to employee card \n added search function

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -14,9 +14,13 @@
     }
 
     &__thumbnail {
-        @include roundy(100px);
+        @include roundy(50px);
         margin-right: 16px;
         overflow: hidden;
+
+        @include media('md') {
+            @include roundy(100px);
+        }
 
         img {
             width: 100%;
