--- a/scss/layouts/_main.scss
+++ b/scss/layouts/_main.scss
@@ -1,5 +1,14 @@
 .main {
     @include media('md') {
-        @include flex($wrap: wrap);
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    @include media('lg') {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @include media('xl') {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
