--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,7 @@ table {
 
 body {
   background: #fcfcfc;
+  min-width: 340px;
 }
 
 .page {
@@ -58,22 +59,32 @@ body {
   padding-top: 40px;
   font-family: "Open Sans", sans-serif;
 }
-@media (min-width: 480px) {
-  .page {
-    width: 80%;
-  }
-}
 .page .header {
   margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.page .header__title {
+  margin-bottom: 20px;
 }
 
 @media (min-width: 480px) {
   .main {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 900px) {
+  .main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1300px) {
+  .main {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
@@ -98,11 +109,21 @@ body {
 }
 .card__thumbnail {
   overflow: hidden;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  min-width: 50px;
+  height: 50px;
   border-radius: 50%;
   margin-right: 16px;
   overflow: hidden;
+}
+@media (min-width: 480px) {
+  .card__thumbnail {
+    overflow: hidden;
+    width: 100px;
+    min-width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
 }
 .card__thumbnail img {
   width: 100%;
@@ -145,6 +166,7 @@ body {
 }
 
 .modal {
+  user-select: none;
   position: relative;
   padding: 40px;
   border-radius: 6px;
@@ -160,6 +182,7 @@ body {
 .modal__thumbnail {
   overflow: hidden;
   width: 160px;
+  min-width: 160px;
   height: 160px;
   border-radius: 50%;
   box-shadow: 0 6px 16px -4px rgba(0, 0, 0, 0.3);
@@ -198,12 +221,14 @@ body {
 
 .left-arrow,
 .right-arrow {
+  user-select: none;
   cursor: pointer;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   overflow: hidden;
   width: 60px;
+  min-width: 60px;
   height: 60px;
   border-radius: 50%;
   display: flex;
@@ -249,22 +274,53 @@ body {
 }
 
 .icn-close {
+  width: 25px;
+  height: 25px;
   cursor: pointer;
   position: absolute;
-  background: white;
-  right: 0px;
-  top: 0px;
+  right: 8px;
+  top: 8px;
   z-index: 1000;
-  overflow: hidden;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+}
+.icn-close path {
+  fill: #E0E0E0;
+  transition: 0.3s ease;
+}
+.icn-close :hover path {
+  fill: #13B4E9;
 }
 
 .header {
   font-weight: 600;
   line-height: 1.5;
   color: #404A51;
+}
+.header__search {
+  outline: none;
+  height: 46px;
+  font-weight: 600;
+  border-radius: 23px;
+  border: 2px solid #E0E0E0;
+  text-align: center;
+  width: 90%;
+  color: #404A51;
+  transition: 0.3s ease;
+}
+@media (min-width: 900px) {
+  .header__search {
+    width: 50%;
+  }
+}
+@media (min-width: 1300px) {
+  .header__search {
+    width: 40%;
+  }
+}
+.header__search:focus {
+  border-color: #13B4E9;
+}
+.header__search::placeholder {
+  color: #92979B;
 }
 
 /*# sourceMappingURL=index.css.map */
