--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -11,4 +11,7 @@ $color-font-header: #404A51;
 $color-font-desc: #92979B;
 
 $breakpoint-md: 480px;
-$breakpoint-lg: 768px;
+$breakpoint-lg: 900px;
+$breakpoint-xl: 1300px;
+
+$body-min-width: 340px;
