--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -47,6 +47,7 @@
 
     &:hover {
         border-color: $color-border-focus;
-        box-shadow: 0 6px 18px -8px rgba($color: #000000, $alpha: 0.2);
+        box-shadow: 0 6px 14px -6px rgba($color: #000000, $alpha: 0.2);
+        transform: translateY(-3px);
     }
 }
