--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -3,7 +3,8 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background: rgba($color: #000000, $alpha: 0.7);    
+    background: rgba($color: #000000, $alpha: 0.7);  
+    z-index: 100;  
 }
 
 .modal-wrapper {
